[package]
name = "xmlop-datatypes"
version = "0.1.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Basic datatypes for xmlop"
repository = "https://github.com/lo48576/xmlop-datatypes"
keywords = ["XML", "datatype"]

[package.metadata.docs.rs]
all-features = true

[features]
nom-4 = ["nom"]

[dependencies]
nom = { version = "4", optional = true }
opaque_typedef = "0.0.4"
opaque_typedef_macros = "0.0.4"

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/xmlop-datatypes" }
